[package]
name = "dex"
version = "0.5.0"
authors = ["Rohit Kumar <letmutx@gmail.com>"]
edition = "2018"
description = "Rust library for parsing dex files"
repository = "https://github.com/letmutx/dex-parser.git"
license = "MIT"
readme = "README.md"
keywords = ["dex", "android", "parser", "dexlib"]

[dependencies]
cesu8 = "1.1.0"
scroll = "0.12.0"
scroll_derive = "0.12.0"
memmap = "0.7.0"
lru = "0.12.3"
num-traits = "0.2"
num-derive = "0.4.2"
bitflags = "2.4.2"
log = "0.4.8"
getset = "0.1.2"
adler32 = "1.0.4"

[dev-dependencies]
tempfile = "3.0.8"
env_logger = "0.7.1"
